Practica_04/src/parser/y.output
   0  $accept : programa $end

   1  programa : definiciones DEF MAIN '(' ')' ':' VOID '{' body '}'

   2  definiciones : definiciones definicion
   3               |

   4  definicion : def ';'
   5             | funcion

   6  funcion : DEF ID '(' params ')' ':' tipo '{' body '}'

   7  body : defs
   8       | sentencias
   9       | defs sentencias
  10       |

  11  params :
  12         | param

  13  param : par
  14        | param ',' par

  15  par : ID ':' tipo

  16  defs : def ';'
  17       | defs def ';'

  18  def : ids ':' tipo

  19  ids : ID
  20      | ids ',' ID

  21  tipo : INT
  22       | DOUBLE
  23       | CHAR
  24       | '[' INT_CONSTANT ']' tipo
  25       | STRUCT '{' campos '}'
  26       | VOID

  27  campos : campo
  28         | campos campo

  29  campo : ids ':' tipo ';'

  30  sentencias : sentencia
  31             | sentencias sentencia

  32  sentencia : PRINT list ';'
  33            | INPUT list ';'
  34            | RETURN expresion ';'
  35            | condicionalSimple
  36            | condicionalComplejo
  37            | while
  38            | expresion ';'

  39  expresion : ID
  40            | INT_CONSTANT
  41            | CHAR_CONSTANT
  42            | REAL_CONSTANT
  43            | '(' expresion ')'
  44            | expresion '[' expresion ']'
  45            | expresion '.' ID
  46            | '(' tipo ')' expresion
  47            | '-' expresion
  48            | '!' expresion
  49            | expresion '*' expresion
  50            | expresion '/' expresion
  51            | expresion '%' expresion
  52            | expresion '+' expresion
  53            | expresion '-' expresion
  54            | expresion '>' expresion
  55            | expresion GREATER expresion
  56            | expresion '<' expresion
  57            | expresion SMALLER expresion
  58            | expresion NEGATION expresion
  59            | expresion EQUALS expresion
  60            | expresion AND expresion
  61            | expresion OR expresion
  62            | expresion '=' expresion
  63            | ID '(' args ')'

  64  list : expresion
  65       | list ',' expresion

  66  while : WHILE expresion ':' '{' sentencias '}'

  67  condicionalSimple : IF expresion ':' cuerpo

  68  condicionalComplejo : IF expresion ':' cuerpo else

  69  else : ELSE cuerpo

  70  cuerpo : cuerpoSimple
  71         | cuerpoComplejo

  72  cuerpoSimple : sentencia

  73  cuerpoComplejo : '{' sentencias '}'

  74  args :
  75       | arg

  76  arg : expresion
  77      | arg ',' expresion

state 0
	$accept : . programa $end  (0)
	definiciones : .  (3)

	.  reduce 3

	programa  goto 1
	definiciones  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : definiciones . DEF MAIN '(' ')' ':' VOID '{' body '}'  (1)
	definiciones : definiciones . definicion  (2)

	DEF  shift 3
	ID  shift 4
	.  error

	definicion  goto 5
	def  goto 6
	funcion  goto 7
	ids  goto 8


state 3
	programa : definiciones DEF . MAIN '(' ')' ':' VOID '{' body '}'  (1)
	funcion : DEF . ID '(' params ')' ':' tipo '{' body '}'  (6)

	ID  shift 9
	MAIN  shift 10
	.  error


state 4
	ids : ID .  (19)

	.  reduce 19


state 5
	definiciones : definiciones definicion .  (2)

	.  reduce 2


state 6
	definicion : def . ';'  (4)

	';'  shift 11
	.  error


state 7
	definicion : funcion .  (5)

	.  reduce 5


state 8
	def : ids . ':' tipo  (18)
	ids : ids . ',' ID  (20)

	':'  shift 12
	','  shift 13
	.  error


state 9
	funcion : DEF ID . '(' params ')' ':' tipo '{' body '}'  (6)

	'('  shift 14
	.  error


state 10
	programa : definiciones DEF MAIN . '(' ')' ':' VOID '{' body '}'  (1)

	'('  shift 15
	.  error


state 11
	definicion : def ';' .  (4)

	.  reduce 4


state 12
	def : ids ':' . tipo  (18)

	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	STRUCT  shift 19
	VOID  shift 20
	'['  shift 21
	.  error

	tipo  goto 22


state 13
	ids : ids ',' . ID  (20)

	ID  shift 23
	.  error


state 14
	funcion : DEF ID '(' . params ')' ':' tipo '{' body '}'  (6)
	params : .  (11)

	ID  shift 24
	')'  reduce 11

	params  goto 25
	param  goto 26
	par  goto 27


state 15
	programa : definiciones DEF MAIN '(' . ')' ':' VOID '{' body '}'  (1)

	')'  shift 28
	.  error


state 16
	tipo : INT .  (21)

	.  reduce 21


state 17
	tipo : DOUBLE .  (22)

	.  reduce 22


state 18
	tipo : CHAR .  (23)

	.  reduce 23


state 19
	tipo : STRUCT . '{' campos '}'  (25)

	'{'  shift 29
	.  error


state 20
	tipo : VOID .  (26)

	.  reduce 26


state 21
	tipo : '[' . INT_CONSTANT ']' tipo  (24)

	INT_CONSTANT  shift 30
	.  error


state 22
	def : ids ':' tipo .  (18)

	.  reduce 18


state 23
	ids : ids ',' ID .  (20)

	.  reduce 20


state 24
	par : ID . ':' tipo  (15)

	':'  shift 31
	.  error


state 25
	funcion : DEF ID '(' params . ')' ':' tipo '{' body '}'  (6)

	')'  shift 32
	.  error


state 26
	params : param .  (12)
	param : param . ',' par  (14)

	','  shift 33
	')'  reduce 12


state 27
	param : par .  (13)

	.  reduce 13


state 28
	programa : definiciones DEF MAIN '(' ')' . ':' VOID '{' body '}'  (1)

	':'  shift 34
	.  error


state 29
	tipo : STRUCT '{' . campos '}'  (25)

	ID  shift 4
	.  error

	ids  goto 35
	campos  goto 36
	campo  goto 37


state 30
	tipo : '[' INT_CONSTANT . ']' tipo  (24)

	']'  shift 38
	.  error


state 31
	par : ID ':' . tipo  (15)

	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	STRUCT  shift 19
	VOID  shift 20
	'['  shift 21
	.  error

	tipo  goto 39


state 32
	funcion : DEF ID '(' params ')' . ':' tipo '{' body '}'  (6)

	':'  shift 40
	.  error


state 33
	param : param ',' . par  (14)

	ID  shift 24
	.  error

	par  goto 41


state 34
	programa : definiciones DEF MAIN '(' ')' ':' . VOID '{' body '}'  (1)

	VOID  shift 42
	.  error


state 35
	ids : ids . ',' ID  (20)
	campo : ids . ':' tipo ';'  (29)

	':'  shift 43
	','  shift 13
	.  error


state 36
	tipo : STRUCT '{' campos . '}'  (25)
	campos : campos . campo  (28)

	ID  shift 4
	'}'  shift 44
	.  error

	ids  goto 35
	campo  goto 45


state 37
	campos : campo .  (27)

	.  reduce 27


state 38
	tipo : '[' INT_CONSTANT ']' . tipo  (24)

	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	STRUCT  shift 19
	VOID  shift 20
	'['  shift 21
	.  error

	tipo  goto 46


state 39
	par : ID ':' tipo .  (15)

	.  reduce 15


state 40
	funcion : DEF ID '(' params ')' ':' . tipo '{' body '}'  (6)

	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	STRUCT  shift 19
	VOID  shift 20
	'['  shift 21
	.  error

	tipo  goto 47


state 41
	param : param ',' par .  (14)

	.  reduce 14


state 42
	programa : definiciones DEF MAIN '(' ')' ':' VOID . '{' body '}'  (1)

	'{'  shift 48
	.  error


state 43
	campo : ids ':' . tipo ';'  (29)

	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	STRUCT  shift 19
	VOID  shift 20
	'['  shift 21
	.  error

	tipo  goto 49


state 44
	tipo : STRUCT '{' campos '}' .  (25)

	.  reduce 25


state 45
	campos : campos campo .  (28)

	.  reduce 28


state 46
	tipo : '[' INT_CONSTANT ']' tipo .  (24)

	.  reduce 24


state 47
	funcion : DEF ID '(' params ')' ':' tipo . '{' body '}'  (6)

	'{'  shift 50
	.  error


state 48
	programa : definiciones DEF MAIN '(' ')' ':' VOID '{' . body '}'  (1)
	body : .  (10)

	INT_CONSTANT  shift 51
	INPUT  shift 52
	PRINT  shift 53
	WHILE  shift 54
	IF  shift 55
	RETURN  shift 56
	ID  shift 57
	REAL_CONSTANT  shift 58
	CHAR_CONSTANT  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	'}'  reduce 10

	body  goto 63
	def  goto 64
	defs  goto 65
	sentencias  goto 66
	ids  goto 8
	sentencia  goto 67
	expresion  goto 68
	condicionalSimple  goto 69
	condicionalComplejo  goto 70
	while  goto 71


state 49
	campo : ids ':' tipo . ';'  (29)

	';'  shift 72
	.  error


state 50
	funcion : DEF ID '(' params ')' ':' tipo '{' . body '}'  (6)
	body : .  (10)

	INT_CONSTANT  shift 51
	INPUT  shift 52
	PRINT  shift 53
	WHILE  shift 54
	IF  shift 55
	RETURN  shift 56
	ID  shift 57
	REAL_CONSTANT  shift 58
	CHAR_CONSTANT  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	'}'  reduce 10

	body  goto 73
	def  goto 64
	defs  goto 65
	sentencias  goto 66
	ids  goto 8
	sentencia  goto 67
	expresion  goto 68
	condicionalSimple  goto 69
	condicionalComplejo  goto 70
	while  goto 71


state 51
	expresion : INT_CONSTANT .  (40)

	.  reduce 40


state 52
	sentencia : INPUT . list ';'  (33)

	INT_CONSTANT  shift 51
	ID  shift 74
	REAL_CONSTANT  shift 58
	CHAR_CONSTANT  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	.  error

	list  goto 75
	expresion  goto 76


state 53
	sentencia : PRINT . list ';'  (32)

	INT_CONSTANT  shift 51
	ID  shift 74
	REAL_CONSTANT  shift 58
	CHAR_CONSTANT  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	.  error

	list  goto 77
	expresion  goto 76


state 54
	while : WHILE . expresion ':' '{' sentencias '}'  (66)

	INT_CONSTANT  shift 51
	ID  shift 74
	REAL_CONSTANT  shift 58
	CHAR_CONSTANT  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	.  error

	expresion  goto 78


state 55
	condicionalSimple : IF . expresion ':' cuerpo  (67)
	condicionalComplejo : IF . expresion ':' cuerpo else  (68)

	INT_CONSTANT  shift 51
	ID  shift 74
	REAL_CONSTANT  shift 58
	CHAR_CONSTANT  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	.  error

	expresion  goto 79


state 56
	sentencia : RETURN . expresion ';'  (34)

	INT_CONSTANT  shift 51
	ID  shift 74
	REAL_CONSTANT  shift 58
	CHAR_CONSTANT  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	.  error

	expresion  goto 80


state 57
	ids : ID .  (19)
	expresion : ID .  (39)
	expresion : ID . '(' args ')'  (63)

	'('  shift 81
	GREATER  reduce 39
	SMALLER  reduce 39
	EQUALS  reduce 39
	NEGATION  reduce 39
	OR  reduce 39
	AND  reduce 39
	'='  reduce 39
	'<'  reduce 39
	'>'  reduce 39
	'-'  reduce 39
	'+'  reduce 39
	'*'  reduce 39
	'/'  reduce 39
	'%'  reduce 39
	'.'  reduce 39
	'['  reduce 39
	':'  reduce 19
	';'  reduce 39
	','  reduce 19


state 58
	expresion : REAL_CONSTANT .  (42)

	.  reduce 42


state 59
	expresion : CHAR_CONSTANT .  (41)

	.  reduce 41


state 60
	expresion : '-' . expresion  (47)

	INT_CONSTANT  shift 51
	ID  shift 74
	REAL_CONSTANT  shift 58
	CHAR_CONSTANT  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	.  error

	expresion  goto 82


state 61
	expresion : '!' . expresion  (48)

	INT_CONSTANT  shift 51
	ID  shift 74
	REAL_CONSTANT  shift 58
	CHAR_CONSTANT  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	.  error

	expresion  goto 83


state 62
	expresion : '(' . expresion ')'  (43)
	expresion : '(' . tipo ')' expresion  (46)

	INT_CONSTANT  shift 51
	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	STRUCT  shift 19
	VOID  shift 20
	ID  shift 74
	REAL_CONSTANT  shift 58
	CHAR_CONSTANT  shift 59
	'-'  shift 60
	'!'  shift 61
	'['  shift 21
	'('  shift 62
	.  error

	tipo  goto 84
	expresion  goto 85


state 63
	programa : definiciones DEF MAIN '(' ')' ':' VOID '{' body . '}'  (1)

	'}'  shift 86
	.  error


state 64
	defs : def . ';'  (16)

	';'  shift 87
	.  error


state 65
	body : defs .  (7)
	body : defs . sentencias  (9)
	defs : defs . def ';'  (17)

	INT_CONSTANT  shift 51
	INPUT  shift 52
	PRINT  shift 53
	WHILE  shift 54
	IF  shift 55
	RETURN  shift 56
	ID  shift 57
	REAL_CONSTANT  shift 58
	CHAR_CONSTANT  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	'}'  reduce 7

	def  goto 88
	sentencias  goto 89
	ids  goto 8
	sentencia  goto 67
	expresion  goto 68
	condicionalSimple  goto 69
	condicionalComplejo  goto 70
	while  goto 71


state 66
	body : sentencias .  (8)
	sentencias : sentencias . sentencia  (31)

	INT_CONSTANT  shift 51
	INPUT  shift 52
	PRINT  shift 53
	WHILE  shift 54
	IF  shift 55
	RETURN  shift 56
	ID  shift 74
	REAL_CONSTANT  shift 58
	CHAR_CONSTANT  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	'}'  reduce 8

	sentencia  goto 90
	expresion  goto 68
	condicionalSimple  goto 69
	condicionalComplejo  goto 70
	while  goto 71


state 67
	sentencias : sentencia .  (30)

	.  reduce 30


state 68
	sentencia : expresion . ';'  (38)
	expresion : expresion . '[' expresion ']'  (44)
	expresion : expresion . '.' ID  (45)
	expresion : expresion . '*' expresion  (49)
	expresion : expresion . '/' expresion  (50)
	expresion : expresion . '%' expresion  (51)
	expresion : expresion . '+' expresion  (52)
	expresion : expresion . '-' expresion  (53)
	expresion : expresion . '>' expresion  (54)
	expresion : expresion . GREATER expresion  (55)
	expresion : expresion . '<' expresion  (56)
	expresion : expresion . SMALLER expresion  (57)
	expresion : expresion . NEGATION expresion  (58)
	expresion : expresion . EQUALS expresion  (59)
	expresion : expresion . AND expresion  (60)
	expresion : expresion . OR expresion  (61)
	expresion : expresion . '=' expresion  (62)

	GREATER  shift 91
	SMALLER  shift 92
	EQUALS  shift 93
	NEGATION  shift 94
	OR  shift 95
	AND  shift 96
	'='  shift 97
	'<'  shift 98
	'>'  shift 99
	'-'  shift 100
	'+'  shift 101
	'*'  shift 102
	'/'  shift 103
	'%'  shift 104
	'.'  shift 105
	'['  shift 106
	';'  shift 107
	.  error


state 69
	sentencia : condicionalSimple .  (35)

	.  reduce 35


state 70
	sentencia : condicionalComplejo .  (36)

	.  reduce 36


state 71
	sentencia : while .  (37)

	.  reduce 37


state 72
	campo : ids ':' tipo ';' .  (29)

	.  reduce 29


state 73
	funcion : DEF ID '(' params ')' ':' tipo '{' body . '}'  (6)

	'}'  shift 108
	.  error


state 74
	expresion : ID .  (39)
	expresion : ID . '(' args ')'  (63)

	'('  shift 81
	GREATER  reduce 39
	SMALLER  reduce 39
	EQUALS  reduce 39
	NEGATION  reduce 39
	OR  reduce 39
	AND  reduce 39
	'='  reduce 39
	'<'  reduce 39
	'>'  reduce 39
	'-'  reduce 39
	'+'  reduce 39
	'*'  reduce 39
	'/'  reduce 39
	'%'  reduce 39
	'.'  reduce 39
	'['  reduce 39
	']'  reduce 39
	')'  reduce 39
	':'  reduce 39
	';'  reduce 39
	','  reduce 39


state 75
	sentencia : INPUT list . ';'  (33)
	list : list . ',' expresion  (65)

	';'  shift 109
	','  shift 110
	.  error


state 76
	expresion : expresion . '[' expresion ']'  (44)
	expresion : expresion . '.' ID  (45)
	expresion : expresion . '*' expresion  (49)
	expresion : expresion . '/' expresion  (50)
	expresion : expresion . '%' expresion  (51)
	expresion : expresion . '+' expresion  (52)
	expresion : expresion . '-' expresion  (53)
	expresion : expresion . '>' expresion  (54)
	expresion : expresion . GREATER expresion  (55)
	expresion : expresion . '<' expresion  (56)
	expresion : expresion . SMALLER expresion  (57)
	expresion : expresion . NEGATION expresion  (58)
	expresion : expresion . EQUALS expresion  (59)
	expresion : expresion . AND expresion  (60)
	expresion : expresion . OR expresion  (61)
	expresion : expresion . '=' expresion  (62)
	list : expresion .  (64)

	GREATER  shift 91
	SMALLER  shift 92
	EQUALS  shift 93
	NEGATION  shift 94
	OR  shift 95
	AND  shift 96
	'='  shift 97
	'<'  shift 98
	'>'  shift 99
	'-'  shift 100
	'+'  shift 101
	'*'  shift 102
	'/'  shift 103
	'%'  shift 104
	'.'  shift 105
	'['  shift 106
	';'  reduce 64
	','  reduce 64


state 77
	sentencia : PRINT list . ';'  (32)
	list : list . ',' expresion  (65)

	';'  shift 111
	','  shift 110
	.  error


state 78
	expresion : expresion . '[' expresion ']'  (44)
	expresion : expresion . '.' ID  (45)
	expresion : expresion . '*' expresion  (49)
	expresion : expresion . '/' expresion  (50)
	expresion : expresion . '%' expresion  (51)
	expresion : expresion . '+' expresion  (52)
	expresion : expresion . '-' expresion  (53)
	expresion : expresion . '>' expresion  (54)
	expresion : expresion . GREATER expresion  (55)
	expresion : expresion . '<' expresion  (56)
	expresion : expresion . SMALLER expresion  (57)
	expresion : expresion . NEGATION expresion  (58)
	expresion : expresion . EQUALS expresion  (59)
	expresion : expresion . AND expresion  (60)
	expresion : expresion . OR expresion  (61)
	expresion : expresion . '=' expresion  (62)
	while : WHILE expresion . ':' '{' sentencias '}'  (66)

	GREATER  shift 91
	SMALLER  shift 92
	EQUALS  shift 93
	NEGATION  shift 94
	OR  shift 95
	AND  shift 96
	'='  shift 97
	'<'  shift 98
	'>'  shift 99
	'-'  shift 100
	'+'  shift 101
	'*'  shift 102
	'/'  shift 103
	'%'  shift 104
	'.'  shift 105
	'['  shift 106
	':'  shift 112
	.  error


state 79
	expresion : expresion . '[' expresion ']'  (44)
	expresion : expresion . '.' ID  (45)
	expresion : expresion . '*' expresion  (49)
	expresion : expresion . '/' expresion  (50)
	expresion : expresion . '%' expresion  (51)
	expresion : expresion . '+' expresion  (52)
	expresion : expresion . '-' expresion  (53)
	expresion : expresion . '>' expresion  (54)
	expresion : expresion . GREATER expresion  (55)
	expresion : expresion . '<' expresion  (56)
	expresion : expresion . SMALLER expresion  (57)
	expresion : expresion . NEGATION expresion  (58)
	expresion : expresion . EQUALS expresion  (59)
	expresion : expresion . AND expresion  (60)
	expresion : expresion . OR expresion  (61)
	expresion : expresion . '=' expresion  (62)
	condicionalSimple : IF expresion . ':' cuerpo  (67)
	condicionalComplejo : IF expresion . ':' cuerpo else  (68)

	GREATER  shift 91
	SMALLER  shift 92
	EQUALS  shift 93
	NEGATION  shift 94
	OR  shift 95
	AND  shift 96
	'='  shift 97
	'<'  shift 98
	'>'  shift 99
	'-'  shift 100
	'+'  shift 101
	'*'  shift 102
	'/'  shift 103
	'%'  shift 104
	'.'  shift 105
	'['  shift 106
	':'  shift 113
	.  error


state 80
	sentencia : RETURN expresion . ';'  (34)
	expresion : expresion . '[' expresion ']'  (44)
	expresion : expresion . '.' ID  (45)
	expresion : expresion . '*' expresion  (49)
	expresion : expresion . '/' expresion  (50)
	expresion : expresion . '%' expresion  (51)
	expresion : expresion . '+' expresion  (52)
	expresion : expresion . '-' expresion  (53)
	expresion : expresion . '>' expresion  (54)
	expresion : expresion . GREATER expresion  (55)
	expresion : expresion . '<' expresion  (56)
	expresion : expresion . SMALLER expresion  (57)
	expresion : expresion . NEGATION expresion  (58)
	expresion : expresion . EQUALS expresion  (59)
	expresion : expresion . AND expresion  (60)
	expresion : expresion . OR expresion  (61)
	expresion : expresion . '=' expresion  (62)

	GREATER  shift 91
	SMALLER  shift 92
	EQUALS  shift 93
	NEGATION  shift 94
	OR  shift 95
	AND  shift 96
	'='  shift 97
	'<'  shift 98
	'>'  shift 99
	'-'  shift 100
	'+'  shift 101
	'*'  shift 102
	'/'  shift 103
	'%'  shift 104
	'.'  shift 105
	'['  shift 106
	';'  shift 114
	.  error


state 81
	expresion : ID '(' . args ')'  (63)
	args : .  (74)

	INT_CONSTANT  shift 51
	ID  shift 74
	REAL_CONSTANT  shift 58
	CHAR_CONSTANT  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	')'  reduce 74

	expresion  goto 115
	args  goto 116
	arg  goto 117


state 82
	expresion : expresion . '[' expresion ']'  (44)
	expresion : expresion . '.' ID  (45)
	expresion : '-' expresion .  (47)
	expresion : expresion . '*' expresion  (49)
	expresion : expresion . '/' expresion  (50)
	expresion : expresion . '%' expresion  (51)
	expresion : expresion . '+' expresion  (52)
	expresion : expresion . '-' expresion  (53)
	expresion : expresion . '>' expresion  (54)
	expresion : expresion . GREATER expresion  (55)
	expresion : expresion . '<' expresion  (56)
	expresion : expresion . SMALLER expresion  (57)
	expresion : expresion . NEGATION expresion  (58)
	expresion : expresion . EQUALS expresion  (59)
	expresion : expresion . AND expresion  (60)
	expresion : expresion . OR expresion  (61)
	expresion : expresion . '=' expresion  (62)

	'.'  shift 105
	'['  shift 106
	GREATER  reduce 47
	SMALLER  reduce 47
	EQUALS  reduce 47
	NEGATION  reduce 47
	OR  reduce 47
	AND  reduce 47
	'='  reduce 47
	'<'  reduce 47
	'>'  reduce 47
	'-'  reduce 47
	'+'  reduce 47
	'*'  reduce 47
	'/'  reduce 47
	'%'  reduce 47
	']'  reduce 47
	')'  reduce 47
	':'  reduce 47
	';'  reduce 47
	','  reduce 47


state 83
	expresion : expresion . '[' expresion ']'  (44)
	expresion : expresion . '.' ID  (45)
	expresion : '!' expresion .  (48)
	expresion : expresion . '*' expresion  (49)
	expresion : expresion . '/' expresion  (50)
	expresion : expresion . '%' expresion  (51)
	expresion : expresion . '+' expresion  (52)
	expresion : expresion . '-' expresion  (53)
	expresion : expresion . '>' expresion  (54)
	expresion : expresion . GREATER expresion  (55)
	expresion : expresion . '<' expresion  (56)
	expresion : expresion . SMALLER expresion  (57)
	expresion : expresion . NEGATION expresion  (58)
	expresion : expresion . EQUALS expresion  (59)
	expresion : expresion . AND expresion  (60)
	expresion : expresion . OR expresion  (61)
	expresion : expresion . '=' expresion  (62)

	'.'  shift 105
	'['  shift 106
	GREATER  reduce 48
	SMALLER  reduce 48
	EQUALS  reduce 48
	NEGATION  reduce 48
	OR  reduce 48
	AND  reduce 48
	'='  reduce 48
	'<'  reduce 48
	'>'  reduce 48
	'-'  reduce 48
	'+'  reduce 48
	'*'  reduce 48
	'/'  reduce 48
	'%'  reduce 48
	']'  reduce 48
	')'  reduce 48
	':'  reduce 48
	';'  reduce 48
	','  reduce 48


state 84
	expresion : '(' tipo . ')' expresion  (46)

	')'  shift 118
	.  error


state 85
	expresion : '(' expresion . ')'  (43)
	expresion : expresion . '[' expresion ']'  (44)
	expresion : expresion . '.' ID  (45)
	expresion : expresion . '*' expresion  (49)
	expresion : expresion . '/' expresion  (50)
	expresion : expresion . '%' expresion  (51)
	expresion : expresion . '+' expresion  (52)
	expresion : expresion . '-' expresion  (53)
	expresion : expresion . '>' expresion  (54)
	expresion : expresion . GREATER expresion  (55)
	expresion : expresion . '<' expresion  (56)
	expresion : expresion . SMALLER expresion  (57)
	expresion : expresion . NEGATION expresion  (58)
	expresion : expresion . EQUALS expresion  (59)
	expresion : expresion . AND expresion  (60)
	expresion : expresion . OR expresion  (61)
	expresion : expresion . '=' expresion  (62)

	GREATER  shift 91
	SMALLER  shift 92
	EQUALS  shift 93
	NEGATION  shift 94
	OR  shift 95
	AND  shift 96
	'='  shift 97
	'<'  shift 98
	'>'  shift 99
	'-'  shift 100
	'+'  shift 101
	'*'  shift 102
	'/'  shift 103
	'%'  shift 104
	'.'  shift 105
	'['  shift 106
	')'  shift 119
	.  error


state 86
	programa : definiciones DEF MAIN '(' ')' ':' VOID '{' body '}' .  (1)

	.  reduce 1


state 87
	defs : def ';' .  (16)

	.  reduce 16


state 88
	defs : defs def . ';'  (17)

	';'  shift 120
	.  error


state 89
	body : defs sentencias .  (9)
	sentencias : sentencias . sentencia  (31)

	INT_CONSTANT  shift 51
	INPUT  shift 52
	PRINT  shift 53
	WHILE  shift 54
	IF  shift 55
	RETURN  shift 56
	ID  shift 74
	REAL_CONSTANT  shift 58
	CHAR_CONSTANT  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	'}'  reduce 9

	sentencia  goto 90
	expresion  goto 68
	condicionalSimple  goto 69
	condicionalComplejo  goto 70
	while  goto 71


state 90
	sentencias : sentencias sentencia .  (31)

	.  reduce 31


state 91
	expresion : expresion GREATER . expresion  (55)

	INT_CONSTANT  shift 51
	ID  shift 74
	REAL_CONSTANT  shift 58
	CHAR_CONSTANT  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	.  error

	expresion  goto 121


state 92
	expresion : expresion SMALLER . expresion  (57)

	INT_CONSTANT  shift 51
	ID  shift 74
	REAL_CONSTANT  shift 58
	CHAR_CONSTANT  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	.  error

	expresion  goto 122


state 93
	expresion : expresion EQUALS . expresion  (59)

	INT_CONSTANT  shift 51
	ID  shift 74
	REAL_CONSTANT  shift 58
	CHAR_CONSTANT  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	.  error

	expresion  goto 123


state 94
	expresion : expresion NEGATION . expresion  (58)

	INT_CONSTANT  shift 51
	ID  shift 74
	REAL_CONSTANT  shift 58
	CHAR_CONSTANT  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	.  error

	expresion  goto 124


state 95
	expresion : expresion OR . expresion  (61)

	INT_CONSTANT  shift 51
	ID  shift 74
	REAL_CONSTANT  shift 58
	CHAR_CONSTANT  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	.  error

	expresion  goto 125

